replaced jdbc-template by spring-data
redesigned:
    - model classes
    - repository interfaces
    - service classes
    - controllers